--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@ignite-ui/tokens": "*",
+    "@ignite-ui/ts-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
