--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@ignite-ui/ts-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
