--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@ignite-ui/react": "*",
+    "@ignite-ui/tokens": "*"
+
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.5.2",
