--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*"
-
+    "@ignite-ui/tokens": "*",
+    "phosphor-react": "^1.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.5.2",
