--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,7 +7,8 @@
     "dev": "storybook dev -p 6006",
     "build": "build-storybook",
     "build-vite": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "deploy-storybook":" storybook-to-ghpages"
   },
   "dependencies": {
     "@ignite-ui/react": "*",
@@ -24,6 +25,7 @@
     "@storybook/blocks": "^7.5.2",
     "@storybook/react": "^7.5.2",
     "@storybook/react-vite": "^7.5.2",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
