--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "workspaces": [
     "packages/*"
   ],
-  "devDependencies": {
-    "turbo": "^1.10.16"
-  },
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=!docs && changeset publish"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.25.0",
+    "turbo": "^1.5.5"
   }
 }
