--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,17 @@
 {
     "$schema": "https://turborepo.org/schema.json",
     "pipeline": {
-     "dev": {
+      "dev": {
         "cache": false
-     },
-     "build": {
+      },
+      "build": {
         "outputs": [
-            "dist/**",
-            "sotrybook-static/**"
+          "dist/**",
+          "storybook-static/**"
         ],
-        "dependsOn": ["^build"]
-     }
+        "dependsOn": [
+          "^build"
+        ]
+      }
     }
-}
+  }
